tests/baselines/reference/declarationEmitIdentifierPredicatesWithPrivateName01.errors.txt
tests/cases/conformance/declarationEmit/typePredicates/declarationEmitIdentifierPredicatesWithPrivateName01.ts(5,33): error TS4060: Return type of exported function has or is using private name 'I'.


==== tests/cases/conformance/declarationEmit/typePredicates/declarationEmitIdentifierPredicatesWithPrivateName01.ts (1 errors) ====
    interface I {
        a: number;
    }
    
    export function f(x: any): x is I {
                                    ~
!!! error TS4060: Return type of exported function has or is using private name 'I'.
        return typeof x.a === "number";
    }